--- a/style.css
+++ b/style.css
@@ -38,15 +38,37 @@ h2 {
     font-weight: lighter;
     font-size: 1.5rem;
     text-transform: uppercase;
-    color: #dfc3f8;
+    color: #c7a7e3;
+    line-height: 0;
 }
+
+h3 {
+    font-family: 'Oswald', sans-serif;
+    font-weight: lighter;
+    font-size: 1rem;
+}
+
 
 p {
     font-family: 'Montserrat', sans-serif;
-    font: 1.2rem;
+    font: 1rem;
     line-height: 2;
     color: dimgray;
 
+}
+
+.tilbage {
+    position: fixed;
+    top: 2%;
+    left: 3%;
+    max-width: 3rem;
+    overflow: visible;
+}
+
+a {
+    text-decoration: none;
+    color: #c7a7e3;
+    font-weight: bold;
 }
 
 /***GENERELLE INDSTILLINGER SLUT***/
@@ -213,11 +235,78 @@ header nav a {
 }
 
 
+
 /***PORTFOLIO SITE SLUT***/
+
+/***WEB***/
+
+
+#web .sectionwrapper {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 0;
+
+}
+
+#web .col_img {
+    flex-grow: 1;
+    flex-basis: 300px;
+    margin: 0.2rem;
+    padding: 1rem;
+}
+
+#web .col {
+    border: 2px solid #dfc3f8;
+    flex-grow: 1;
+    flex-basis: 300px;
+    margin: 2.4rem;
+    padding: 1rem;
+}
+
+#web .col_img:hover {
+    transform: scale(1.1);
+}
+
+#web .dadaisme {
+    width: 90%;
+    position: relative;
+    transition: 0.5s;
+    margin: 0.8rem;
+}
+
+#web .tekst {
+    position: absolute;
+    z-index: 2;
+    width: 50%;
+    bottom: 25.5%;
+    right: 25.5%;
+    font-family: 'Oswald', sans-serif;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    color: #fbfbfb;
+    background-color: #332144;
+    text-align: center;
+    opacity: 1;
+
+}
+
+
+/***WEB SLUT***/
+
+
 
 
 
 @media only screen and (min-width:1200px) {
+
+    .tilbage {
+        position: fixed;
+        top: 5%;
+        left: 3%;
+        max-width: 7rem;
+        overflow: visible;
+    }
+
     #om .overskrift {
         margin-left: 20rem;
         margin-right: 20rem;
@@ -259,8 +348,7 @@ header nav a {
         /*        font-weight: bold;*/
     }
 
-    #om h1,
-    h2 {
+    #om h2 {
         color: #332144;
         text-decoration: none;
     }
@@ -292,5 +380,26 @@ header nav a {
         width: 88.7%;
     }
 
+    #web .overskrift {
+        margin-left: 20rem;
+        margin-right: 20rem;
+        margin-top: 0;
+        position: absolute;
+        flex-basis: 700px;
+        flex-grow: 1;
+    }
 
-}
+    #web .col_img {
+        width: 100%;
+        margin-right: 1rem;
+        margin-top: 18rem;
+
+    }
+
+    #web .col {
+        width: 100%;
+        margin-left: 5rem;
+        margin-top: 15rem;
+
+
+    }
